--- a/Flappy.ioc
+++ b/Flappy.ioc
@@ -84,8 +84,9 @@ PB3\ (JTDO/TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO/TRACESWO).GPIO_Label=LCD_RST
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Signal=GPIO_Output
-PB4\ (NJTRST).GPIOParameters=GPIO_Label
+PB4\ (NJTRST).GPIOParameters=GPIO_PuPd,GPIO_Label
 PB4\ (NJTRST).GPIO_Label=BTN1
+PB4\ (NJTRST).GPIO_PuPd=GPIO_PULLUP
 PB4\ (NJTRST).Locked=true
 PB4\ (NJTRST).Signal=GPIO_Input
 PCC.Checker=false
